--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,19 @@
 spring:
   r2dbc:
-    url: "r2dbc:mysql://mysql@localhost:3306/kry"
-    name: "username"
+    url: "r2dbc:pool:mysql://localhost:3306/kry"
     password: "password"
+    username: "user"
 
   flyway:
-    enabled: true
-    schemas: kry_service_poller
+    schemas: kry
+    url: "jdbc:mysql://localhost:3306/kry"
+    user: ${spring.r2dbc.username}
+    password: ${spring.r2dbc.password}
+    baseline-on-migrate: true
+
+logging:
+  level:
+    root: info
 
 server:
   port: 8080
