--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 spring:
+  jackson:
+    serialization:
+      WRITE_DATES_AS_TIMESTAMPS: false
+    date-format: yyyy-MM-dd'T'HH:mm
+
   data:
     elasticsearch:
       client:
         reactive:
           endpoints: "localhost:9200"
+
   elasticsearch:
     rest:
       uris:
@@ -28,8 +34,7 @@ management:
   endpoints:
     enabled-by-default: true
     web:
-      base-path: /
       exposure:
-        include: 'health, metrics, prometheus, ping, healthcheck'
+        include: 'health, metrics, info'
 
 
