--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,30 @@ plugins {
     id 'org.springframework.boot' version '2.5.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id "com.avast.gradle.docker-compose" version "0.14.9"
+    id "com.github.node-gradle.node" version "3.0.1"
     id 'java'
 }
 
 group = 'com.kry.codetest'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+node {
+    version = '16.13.0'
+}
+
+task buildReactApp(type: NodeTask, dependsOn: 'npmInstall') {
+    script = project.file('node_modules/webpack/bin/webpack.js')
+    args = [
+            '--mode', 'development',
+            '--entry', './src/main/webapp/javascript/Main.jsx',
+            '-o', './src/main/resources/static/dist'
+    ]
+}
+
+processResources.dependsOn 'buildReactApp'
+clean.delete << file('node_modules')
+clean.delete << file('src/main/resources/static/dist')
 
 dockerCompose.isRequiredBy(test)
 
