--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ task buildReactApp(type: NodeTask, dependsOn: 'npmInstall') {
     script = project.file('node_modules/webpack/bin/webpack.js')
     args = [
             '--mode', 'development',
-            '--entry', './src/main/webapp/javascript/Main.jsx',
+            '--entry', './src/main/webapp/index.jsx',
             '-o', './src/main/resources/static/dist'
     ]
 }
