--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "spring-react-app",
   "description": "Sample application using React with Spring Boot",
+  "scripts": {
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open"
+  },
   "dependencies": {
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
@@ -9,8 +13,24 @@
     "css-loader": "^5.0.2",
     "react": "~17.0.1",
     "react-dom": "~17.0.1",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^4.3.0",
+    "html-webpack-plugin": "^4.5.0",
+    "less": "^3.11.0",
+    "less-loader": "^7.0.1",
+    "path": "^0.12.7",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   }
 }
