--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@hookform/resolvers": "^1.0.0",
+    "prop-types": "^15.7.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
     "react": "~17.0.1",
     "react-dom": "~17.0.1",
+    "react-hook-form": "^6.9.2",
     "react-router-dom": "^5.1.2",
+    "rxjs": "^6.5.5",
+    "yup": "^0.29.3",
     "style-loader": "^2.0.0",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
